# konkour-bot

./: .env  .env.example  .gitignore  G.py  README.md  app.py  check_compatibility.py  config.py  database.py  deploy.py  dockerfile  exam_data.py  gunicorn_config.py  install_requirements.py  keyboards.py  main.py  nixpacks.toml  persian_date.py  pyproject.toml  railway.json  railway.toml  render.yaml  requirements.txt  run.py  runtime.txt  server.py  utils.py
config/: __init__.py
database/: __init__.py  base.py  models.py  operations.py
database/utils/: __init__.py  (+1 more)
handlers/: __init__.py  admin.py  admin_handlers.py  attendance.py  back_handlers.py  bot_handlers.py  calendar.py  countdown.py  error_handler.py  error_handlers.py  exam_handlers.py  help.py  init.py  main_handlers.py  main_menu.py  membership_handlers.py  menu_handlers.py  messages.py  reminders.py  statistics.py  stats_handlers.py  study_handlers.py  study_plan.py
reminder/: __init__.py  advanced_reminder_handlers.py  advanced_reminder_keyboards.py  advanced_reminder_scheduler.py  advanced_reminder_states.py  auto_reminder_admin.py  auto_reminder_handlers.py  auto_reminder_scheduler.py  auto_reminder_system.py  reminder_database.py  reminder_handlers.py  reminder_keyboards.py  reminder_scheduler.py  reminder_utils.py
static/: .keep
utils/: __init__.py  circuit_breaker.py  constants.py  error_handlers.py  general_utils.py  health_monitor.py  helpers.py  keyboard_utils.py  logger.py  membership_utils.py  memory_manager.py  modern_analyzer.py  polars_analyzer.py  study_utils.py  time_utils.py
(+6 files in other folders)
